<resources>
    <string name="app_name">Remote Control</string>
    <string name="control_port">Control Port</string>
    <string name="save">Save</string>
    <string name="stream_video_url">Stream Video Url</string>
    <string name="control_host">Control Host</string>
    <string name="left_motor_speed">Left Motor Speed</string>
    <string name="right_motor_speed">Right Motor Speed</string>
    <string name="control">Control</string>
    <string name="preview">Preview</string>
    <string name="setting">Setting</string>
    <string name="capture">\uD83D\uDCF7</string>
    <string name="up">\u25B2</string>
    <string name="down">\u25BC</string>
    <string name="left">\u25C0</string>
    <string name="right">\u25B6</string>
    <string name="anti_clockwise">\u21B6</string>
    <string name="clockwise">\u21b7</string>
    <string name="debug_setting">Debug Setting</string>
    <string name="system_error">System Error</string>
    <string name="error">Error</string>
    <string name="screen_capture">Screen Capture</string>
    <string name="screen_captured">Screen Captured</string>
    <string name="success">Success</string>
    <string name="storage_permission_problem">Storage Permission Problem</string>
    <string name="capture_folder_name">Capture Folder Name</string>
    <string name="sync">Sync</string>
    <string name="_0">0</string>
    <string name="configuration">Configuration</string>
    <string name="car_remote_control">Car Remote Control</string>
    <string name="debug_config">Debug Configuration</string>
    <string name="fps">FPS</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="txt_left">Left</string>
    <string name="txt_right">Right</string>
    <string name="stop">Stop</string>
    <string name="servo_left">Servo Left</string>
    <string name="servo_right">Servo Right</string>
    <string name="speed">Speed</string>
    <string name="led">LED</string>
    <string name="config_saved">Configuration Saved!</string>
    <string name="update_config">Connection Failed! Please update your configuration.</string>
    <string name="conn_failed">Connection Failed</string>
    <string name="go">GO</string>
    <string name="status_all_ok">Camera - OK!\nCar - OK!</string>
    <string name="servo_centre">Servo Centre</string>
    <string name="distance">Distance</string>
</resources>
